--- a/index.html
+++ b/index.html
@@ -489,4 +489,5 @@
 
 
   <!-- ================== Inizio Script JS ================== -->
-  <script type="module" src="script.js"></script>
+
+  <script src="script.js" defer></script>
