--- a/index.html
+++ b/index.html
@@ -490,4 +490,5 @@
 
   <!-- ================== Inizio Script JS ================== -->
 
-  <script src="script.js" defer></script>
+<script type="module" src="script.js"></script>
+
